c4prj2_input/grade.txt
Grading at Mon Oct  7 18:19:55 UTC 2019
Compiling cards.c -> cards.o
cards.c: In function ‘ranking_to_string’:
cards.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of cards.c failed

Overall Grade: F
